Added more comments to code

--- a/Ch03/2.Convolution_networks.ipynb
+++ b/Ch03/2.Convolution_networks.ipynb
@@ -25,11 +25,29 @@
    "source": [
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
-    "%matplotlib inline"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "def fix_random_seed(seed):\n",
+    "    \"\"\" Setting the random seed of various libraries \"\"\"\n",
+    "    try:\n",
+    "        np.random.seed(seed)\n",
+    "    except NameError:\n",
+    "        print(\"Warning: Numpy is not imported. Setting the seed for Numpy failed.\")\n",
+    "    try:\n",
+    "        tf.random.set_seed(seed)\n",
+    "    except NameError:\n",
+    "        print(\"Warning: TensorFlow is not imported. Setting the seed for TensorFlow failed.\")\n",
+    "    try:\n",
+    "        random.seed(seed)\n",
+    "    except NameError:\n",
+    "        print(\"Warning: random module is not imported. Setting the seed for random failed.\")\n",
+    "\n",
+    "# Fixing the random seed\n",
+    "fix_random_seed(4321)\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
    ]
   },
   {
@@ -47,6 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow_datasets as tfds\n",
+    "# Loading the CIFAR10 dataset\n",
     "data = tfds.load('cifar10')"
    ]
   },
@@ -113,8 +133,18 @@
     }
    ],
    "source": [
+    "# Let's see the first element in the training set\n",
     "for i in data[\"train\"].take(1):\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting the data\n",
+    "\n",
+    "Let's plot some data along with the image categories for those images."
    ]
   },
   {
@@ -136,14 +166,21 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Take 10 samples randomly to plot\n",
     "sample_images, sample_labels = [],[]\n",
     "for d in data[\"train\"].shuffle(100, seed=4321).take(10):\n",
     "    sample_images.append(d[\"image\"].numpy())\n",
     "    sample_labels.append(d[\"label\"].numpy())\n",
     "\n",
+    "# Creating a label map mapping the integer label to the string\n",
     "label_map = dict(zip(\n",
     "    list(range(10)),\n",
     "    [\"airplane\", \"automobile\", \"bird\", \"cat\", \"deer\", \"dog\", \"frog\", \"horse\", \"ship\", \"truck\"]))\n",
+    "\n",
+    "# Plotting the images\n",
     "f, axes = plt.subplots(2, 5, figsize=(9,4))\n",
     "for i, (img, lbl) in enumerate(zip(sample_images, sample_labels)):\n",
     "    r, c = i//5, i%5\n",
@@ -177,7 +214,7 @@
       "\u001b[1;31mInvalidArgumentError\u001b[0m: Negative dimension size caused by subtracting 7 from 6 for 'conv2d_2/Conv2D' (op: 'Conv2D') with input shapes: [?,6,6,32], [7,7,32,64].",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-fb7c1337f366>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m      \u001b[0mlayers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mConv2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;31m# 6 -> -1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mlayers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     layers.Dense(10, activation='softmax')]\n\u001b[0m\u001b[0;32m      7\u001b[0m )\n",
+      "\u001b[1;32m<ipython-input-5-53ebcdf475ef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m      \u001b[0mlayers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mConv2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;31m# 6 -> -1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mlayers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     layers.Dense(10, activation='softmax')]\n\u001b[0m\u001b[0;32m     13\u001b[0m )\n",
       "\u001b[1;32mc:\\anaconda3\\envs\\manning.tf2\\lib\\site-packages\\tensorflow_core\\python\\training\\tracking\\base.py\u001b[0m in \u001b[0;36m_method_wrapper\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    455\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m  \u001b[1;31m# pylint: disable=protected-access\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    456\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 457\u001b[1;33m       \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    458\u001b[0m     \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    459\u001b[0m       \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprevious_value\u001b[0m  \u001b[1;31m# pylint: disable=protected-access\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mc:\\anaconda3\\envs\\manning.tf2\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\sequential.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, layers, name)\u001b[0m\n\u001b[0;32m    114\u001b[0m       \u001b[0mtf_utils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massert_no_legacy_layers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m       \u001b[1;32mfor\u001b[0m \u001b[0mlayer\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlayers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 116\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    117\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    118\u001b[0m   \u001b[1;33m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mc:\\anaconda3\\envs\\manning.tf2\\lib\\site-packages\\tensorflow_core\\python\\training\\tracking\\base.py\u001b[0m in \u001b[0;36m_method_wrapper\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    455\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m  \u001b[1;31m# pylint: disable=protected-access\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    456\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 457\u001b[1;33m       \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    458\u001b[0m     \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    459\u001b[0m       \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprevious_value\u001b[0m  \u001b[1;31m# pylint: disable=protected-access\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -199,6 +236,12 @@
     }
    ],
    "source": [
+    "from tensorflow.keras import layers, models\n",
+    "import tensorflow.keras.backend as K\n",
+    "\n",
+    "K.clear_session()\n",
+    "\n",
+    "# Defining the CNN model\n",
     "cnn = models.Sequential(\n",
     "    [layers.Conv2D(filters=16,kernel_size=(9,9), strides=(2,2), activation='relu', input_shape=(32,32,3)), # 32->12\n",
     "     layers.Conv2D(32, (7,7), activation='relu'), # 12 -> 6\n",
@@ -223,6 +266,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow.keras import layers, models\n",
+    "import tensorflow.keras.backend as K\n",
+    "\n",
+    "K.clear_session()\n",
+    "\n",
+    "# Defining the CNN model without any errores\n",
     "cnn = models.Sequential(\n",
     "    [layers.Conv2D(filters=16,kernel_size=(3,3), strides=(2,2), activation='relu', padding='same', input_shape=(32,32,3)), # 32->16\n",
     "     layers.MaxPool2D(pool_size=(2,2), strides=(2,2), padding='same'), # 16->8\n",
@@ -233,6 +282,8 @@
     "     layers.Dense(32, activation='relu'),\n",
     "     layers.Dense(10, activation='softmax')]\n",
     ")\n",
+    "\n",
+    "# Compiling the model\n",
     "cnn.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])"
    ]
   },
@@ -257,73 +308,70 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "1563/1563 [==============================] - 20s 13ms/step - loss: 1.9501 - acc: 0.3278\n",
+      "1563/1563 [==============================] - 23s 15ms/step - loss: 2.0449 - acc: 0.285655 - acc: \n",
       "Epoch 2/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.4575 - acc: 0.4734\n",
+      "1563/1563 [==============================] - 14s 9ms/step - loss: 1.5201 - acc: 0.4484\n",
       "Epoch 3/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.3002 - acc: 0.5332\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 1.3475 - acc: 0.5162\n",
       "Epoch 4/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.2058 - acc: 0.5701\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 1.2285 - acc: 0.5643\n",
       "Epoch 5/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.1456 - acc: 0.5919\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 1.1536 - acc: 0.5948\n",
       "Epoch 6/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.1012 - acc: 0.6087\n",
+      "1563/1563 [==============================] - 17s 11ms/step - loss: 1.0990 - acc: 0.6136 1\n",
       "Epoch 7/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.0703 - acc: 0.6215\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 1.0592 - acc: 0.6285\n",
       "Epoch 8/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.0335 - acc: 0.6359\n",
+      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.0240 - acc: 0.6398\n",
       "Epoch 9/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 1.0140 - acc: 0.6422\n",
+      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.9968 - acc: 0.6508\n",
       "Epoch 10/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.9865 - acc: 0.6517\n",
+      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.9730 - acc: 0.6567\n",
       "Epoch 11/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.9690 - acc: 0.6595\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.9546 - acc: 0.6660\n",
       "Epoch 12/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.9498 - acc: 0.6664\n",
+      "1563/1563 [==============================] - 14s 9ms/step - loss: 0.9358 - acc: 0.6714\n",
       "Epoch 13/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.9293 - acc: 0.6724\n",
+      "1563/1563 [==============================] - 14s 9ms/step - loss: 0.9167 - acc: 0.6765\n",
       "Epoch 14/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.9131 - acc: 0.6792\n",
+      "1563/1563 [==============================] - 15s 10ms/step - loss: 0.9047 - acc: 0.6815\n",
       "Epoch 15/25\n",
-      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.9027 - acc: 0.6842\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.8940 - acc: 0.6869\n",
       "Epoch 16/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8820 - acc: 0.6915\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.8801 - acc: 0.6906\n",
       "Epoch 17/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8731 - acc: 0.6945\n",
+      "1563/1563 [==============================] - 14s 9ms/step - loss: 0.8672 - acc: 0.6961\n",
       "Epoch 18/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8611 - acc: 0.6988\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.8564 - acc: 0.7022\n",
       "Epoch 19/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8448 - acc: 0.7051\n",
+      "1563/1563 [==============================] - 16s 10ms/step - loss: 0.8473 - acc: 0.7042\n",
       "Epoch 20/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8364 - acc: 0.7070\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.8354 - acc: 0.7079\n",
       "Epoch 21/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8264 - acc: 0.7114\n",
+      "1563/1563 [==============================] - 14s 9ms/step - loss: 0.8315 - acc: 0.7106\n",
       "Epoch 22/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8174 - acc: 0.7125\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.8208 - acc: 0.7115\n",
       "Epoch 23/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8108 - acc: 0.7164\n",
+      "1563/1563 [==============================] - 15s 9ms/step - loss: 0.8126 - acc: 0.7137\n",
       "Epoch 24/25\n",
-      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8052 - acc: 0.7179\n",
+      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.8072 - acc: 0.7173\n",
       "Epoch 25/25\n",
-      "1563/1563 [==============================] - 13s 8ms/step - loss: 0.7962 - acc: 0.7200\n"
+      "1563/1563 [==============================] - 12s 8ms/step - loss: 0.8057 - acc: 0.7179\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1c3f687d780>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import tensorflow as tf\n",
+    "\n",
     "def format_data(x, depth):\n",
+    "    \"\"\" Create a tuple where 1st element is a batch of images \n",
+    "    and the second is a batch of onehot encoded vectors\"\"\"\n",
     "    return (tf.cast(x[\"image\"], 'float32'), tf.one_hot(x[\"label\"], depth=depth))\n",
+    "\n",
+    "# Map the dataset using the function\n",
     "tr_data = data[\"train\"].map(lambda x: format_data(x, depth=10)).batch(32)\n",
     "\n",
+    "# Fit the data\n",
     "history = cnn.fit(tr_data,epochs=25)"
    ]
   },
