--- a/Ch03/4.Transformer.ipynb
+++ b/Ch03/4.Transformer.ipynb
@@ -6,6 +6,18 @@
    "source": [
     "# Transformers\n",
     "\n",
+    "Transformers are the latest addition to the deep learning portfolio. Transformer networks started from the natural language processing domain and has permeated to other areas like computer vision. This was introduced in the paper [Attention is all you need](https://arxiv.org/pdf/1706.03762.pdf) by Vaswani et. al. In this chapter, we are going to look at various technical details of how to implement a Transformer ourselves. The Transformer has two main parts.\n",
+    "\n",
+    "* Encoder \n",
+    "* Decoder\n",
+    "\n",
+    "Both the encoder and the decoder has multiple layers in it, and each layer consists of following types of sub layers.\n",
+    "\n",
+    "* Self-attention layer - This layer allows to pay attention to other inputs words in the sequence while processing a given input word. For example if the model is processing the word \"it\" from the sentence \"I kicked the ball and it disappeared\", this layer can pay attention the word \"ball\" while processing the word \"it\". This ability is quite important when it comes to natural language related tasks.\n",
+    "* Fully connected layer - This adds depth to the model, allowing the model to learn more and more high level features.\n",
+    "\n",
+    "\n",
+    "\n",
     "## Importing necessary libraries"
    ]
   },
@@ -25,7 +37,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the inputs and variables"
+    "## Defining the inputs and variables\n",
+    "\n",
+    "Here we define an input sequence (having 7 timesteps) and the respective variables that will be in a self-attention layer. The input to the model is a batch of sentences, and each sentence is a sequence of words, and each word is represented as a vector (e.g. word embeddings). In summary, the input has following dimensions.\n",
+    "\n",
+    "* Batch dimension (1) - In our example, a batch will have a single sentence\n",
+    "* Time dimension (7) - In our example, the sentence has 7 words\n",
+    "* Feature dimension (512) - In our example, each word is represented by a 512 elements long word vector\n",
+    "\n",
+    "The weights are of size $n \\times n$, where $n$ is the feature dimensionality of the input to that layer. This means that during the computations, the weight matrix takes a $b \\times t \\times n$ input and prodicues a $b \\times t \\times n$."
    ]
   },
   {
@@ -61,7 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the SelfAttention layer"
+    "## Defining the SelfAttention layer\n",
+    "\n",
+    "Here we are going to define the self-attention mechanism encapsulated in a Keras layer. "
    ]
   },
   {
@@ -118,7 +140,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using the Self-Attention in a Multi-head Attention Layer"
+    "## Using the Self-Attention in a Multi-head Attention Layer\n",
+    "\n",
+    "In the Transformer network found in the original paper, the self-attention layers are found as multi-head attention layers. This means each layer has multiple smaller attention layers. This enables the model to learn more robust features than when having a single big attention layer."
    ]
   },
   {
@@ -146,7 +170,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the Fully-Connected Layer"
+    "## Defining the Fully-Connected Layer\n",
+    "\n",
+    "Now let's define the fully-connected sublayer found in the Transformer networks."
    ]
   },
   {
@@ -201,7 +227,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining a SelfAttention layer with Masking Capability"
+    "## Defining a SelfAttention layer with Masking Capability\n",
+    "\n",
+    "The decoder model uses a special type of attention layer. This attention layer masks any words ahead of the current word being processed. This in turn helps to avoid the decoder from seeing words it shouldn't during the training process."
    ]
   },
   {
@@ -265,7 +293,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining a Mask using TensorFlow"
+    "## Defining a Mask using TensorFlow\n",
+    "\n",
+    "Let's now define an example mask in TensorFlow. As we have defined an input sequence having 7 steps, let's define a mask for 7 steps."
    ]
   },
   {
@@ -321,7 +351,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the Encoder Layer and the Decoder Layer"
+    "## Defining the Encoder Layer and the Decoder Layer\n",
+    "\n",
+    "With all the low-level details ironed out, let's define the encoder and decoder layers."
    ]
   },
   {
